# pico_w-modem

./: .gitignore  CMakeLists.txt  README.md
CMakeModules/: FindProjectUtilities.cmake  PatchFile.cmake
config/: FreeRTOSConfig.h  lwipopts.h  lwipopts_examples_common.h  user_settings.h
firmware/: README.md  SSC.C800.s  SSC.CN00.s  SSC.CORE.s  SSC.HILEV.s  SSC.TERM.s  SSC.UTIL.s  SSC.cfg  SSC.s
modem/: CMakeLists.txt  Client.h  CoreBUS.cpp  CoreBUS.h  CoreUART.cpp  CoreUART.h  IPAddress.cpp  IPAddress.h  MemBuffer.cpp  MemBuffer.h  Modem.cpp  NTPClient.cpp  NTPClient.h  Print.cpp  Print.h  Printable.h  Queue.cpp  Queue.h  RingBuf.h  SDFile.cpp  SDFile.h  Serial.cpp  Serial.h  Stream.cpp  Stream.h  WString.cpp  WString.h  WiFi.cpp  WiFi.h  WiFiClient.cpp  WiFiClient.h  compat.h  hw_config.c  incbin.s  main.cpp  wcList.h
patches/: README.txt  libsmb2-CMakeLists.txt  wolfssh-Makefile  wolfssh-internal.c.v1.4.12-stable  wolfssh-ssh.c.v1.4.12-stable  wolfssl-Makefile.common
